# RateMeAI

./: .gitattributes  .gitignore  .gitmodules  README.md  __init__.py  download_data.py  evaluate_image.py  prepare_data.py  pyproject.toml  train_model.py
dev_notebooks/: dataset_statistics.ipynb  download_thumbnails.ipynb  make_training_charts.ipynb  parse_comments.ipynb  start_jpy.sh
models/: image_rating_model_final.pth  losses.txt
modules/: __init__.py  backbones.py  clip_model.py  complex_head.py  convnext_model.py  dino_model.py  efficientnet_model.py  heads.py  image_dataset.py  image_rating_model.py  reddit_tools.py  torchgpu.py  visiontranformer_model.py
