[project]
name = "ratemeai"
version = "0.1.0"
description = ""
authors = [
    {name = "Pop101"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "zstandard (>=0.23.0,<0.24.0)",
    "polars (>=1.27.1,<2.0.0)",
    # torch-directml 0.2.5 hard-pins torch==2.4.1, so the torch/torchvision
    # ranges must include that pair. CPU/CUDA users can still install newer.
    "torch (>=2.5,<3.0)",
    "torchvision (>=0.20,<1.0)",
    "efficientnet-pytorch (>=0.7.1,<0.8.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "transformers (>=5.0,<6.0)",
    "lightning (>=2.4,<3.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
jupyter = ">=1.1.1,<2.0.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
